   obsproc_prep/sorc/clean.sh
 A obsproc_prep/sorc/clobber.sh
   obsproc_prep/sorc/install.sh
 M obsproc_prep/sorc/load_libs.rc
   obsproc_prep/sorc/README.build
   obsproc_prep/sorc/setlibs.rc
   obsproc_prep/ush/prepobs_cqcbufr.sh
   obsproc_prep/ush/prepobs_cqcvad.sh
   obsproc_prep/ush/getges_driver.sh
   obsproc_prep/ush/getges.sh
   obsproc_prep/ush/getges_sig.sh
   obsproc_prep/ush/prepobs_glerladj.sh
   obsproc_prep/ush/prepobs_makeprepbufr.sh
   obsproc_prep/ush/prepobs_oiqcbufr.sh
   obsproc_prep/ush/prepobs_prepacqc.sh
   obsproc_prep/ush/prepobs_prevents.sh
   obsproc_prep/ush/prepobs_profcqc.sh
   obsproc_prep/ush/prepobs_syndata.sh
( A - added,  M - modified, D - deleted)


 Source code and build changes (in sorc directory):
   prepobs_prepacqc.fd/acftobs_qc.f:
    - Modified subroutine invalid_qc to correct a run-time error revealed
      when all debug options are enabled.  When t_prcn has a missing 
      value, 1.0000000E+09, multiplying by 100 exceeds the 32-bit signed
      integer maximum, 2,147,483,647.
   prepobs_prepdata.fd/iw3unpbf.f:
    - For BUFR-feed marine data streams (msg types nc00110*), if the SST1
      field is missing, then the sea surface temperature is obtained from
      the SST0 field instead.
    - Report type values for fixed and drifting BUFR-feed buoy data were
      set to 563 & 564, respectively; BUFR-feed C-MAN data report type
      was set to 531.
    - In function I02UBF, changed the windowing decade from 20 to 40 for
      cases when the year is represented by 2 digits instead of 4.
    - In function R04UBF:
      - Change to encode elevation, HSMSL, in BUFR format from the ADPSFC
        dump file.
      - Change to encode cloud height in BUFR format from the ADPSFC dump
        file.  Change to encode HOCB and HOCT with different attributes.
      - Change to encode precipitation reports in BUFR format from the
        ADPSFC dump file.  Convert the precipitation (TOPC) to the established